# rpi_pico

./: .gitignore  LICENSE  README.md
pico-ball8-project/: 8balltest.sln  8balltest.vgdbproj  CMakeLists.txt  pico_sdk_import.cmake
pico-ball8-project/main/: CMakeLists.txt  GC9A01.c  GC9A01.h  MPU9250.c  MPU9250.h  battery.c  battery.h  common.h  font24cyr.c  font24eng.c  fontlvgl.h  image.c  image.h  main.c  phymodel.c  phymodel.h  prophet.c  prophet.h  prophet_card.h  prophet_en.c  prophet_ua.c
